grammar check by GPT

--- a/app/views/docs/authentication-anonymous.phtml
+++ b/app/views/docs/authentication-anonymous.phtml
@@ -92,7 +92,7 @@ mutation {
 <p>
     Anonymous users cannot sign back in. 
     If they close their browser, or go to another computer, they won't be able to log in again.
-    Remeber to prompt the user to create an account to no lose their data.
+    Remeber to prompt the user to create an account to not lose their data.
 </p>
 
 <p>
@@ -104,7 +104,7 @@ mutation {
     <a href="/docs/authentication-email-pass">Email and password</a>
   </li>
   <li>
-    <a href="/docs/authentication-sms">Phone</a>
+    <a href="/docs/authentication-sms">Phone (SMS)</a>
   </li>
   <li>
     <a href="/docs/authentication-magic">Magic URL</a>   
