--- a/app/views/docs/authentication-email-pass.phtml
+++ b/app/views/docs/authentication-email-pass.phtml
@@ -433,5 +433,5 @@ let token = try await account.updateRecovery(
 </ul>
 
 <h2><a href="#security" id="security">Security</a></h2>
-[TODO: @steven Talk about the password security features like password dictionary, passowrd history, and prevent personal information.]
+[TODO: @steven Talk about the password security features like password dictionary, password history, and prevent personal information.]
 [Be brief, link to security page for details]
