--- a/app/views/docs/authentication-management.phtml
+++ b/app/views/docs/authentication-management.phtml
@@ -1,5 +1,5 @@
 <p>
-    Appwrite has build in features to help manage user accounts.
+    Appwrite has built-in features to help manage user accounts.
     Users can be organized into teams and be given labels, so they can be given different permissions and access different resources.
     Each user can also have their own preference object, which you can use to save preferences such as theme, language, and notification settings.
 </p>
