--- a/app/views/docs/authentication-server.phtml
+++ b/app/views/docs/authentication-server.phtml
@@ -12,7 +12,7 @@
 <p>When you build backend APIs to extend Appwrite's functionality, these APIs should still <b>respect access permissions</b> to keep user data secure. Appwrite's backend SDKs allows you to securely act on behalf of a user with the same permissions by using JWT authentication.</p>
 
 <h2><a href="/docs/authentication-server#jwt" id="jwt">JWT Authentication</a></h2>
-<p><a href="https://jwt.io/introduction" target="_blank" rel="noopener">JSON Web Tokens</a> (JWTs) are a secure means to transfer information or claims between two parties. JWT act like temporary copies of the user's ID card that allow Appwrite's Server SDKs to access information oh behalf of a user.</p>
+<p><a href="https://jwt.io/introduction" target="_blank" rel="noopener">JSON Web Tokens</a> (JWTs) are a secure means to transfer information or claims between two parties. JWTs act like temporary copies of the user's ID card that allow Appwrite's Server SDKs to access information on behalf of a user.</p>
 
 <p>You need to create a session using the Client SDKs <b>before</b> generating a JWT. The JWT will be a stateless proof of claim for the identity of the authenticated user and expire after 15 minutes or when the session is deleted.</p>
 
@@ -441,7 +441,7 @@ var documentList = await databases.ListDocuments(
     </li>
 </ul>
 
-<p>Only the birthday of Kevin is returned and documents where <code>user-A</code> has no permissions to access are not returned.</p>
+<p>Only Kevin's birthday is returned and documents where <code>user-A</code> has no permissions to access are not returned.</p>
 <div class="ide">
     <pre class="line-numbers"><code class="prism language-javascript" data-prism>{
   "total": 1,
