--- a/app/views/docs/authentication-security.phtml
+++ b/app/views/docs/authentication-security.phtml
@@ -95,5 +95,8 @@
 <p>Password dictionary can be enabled in the Auth service's <b>Security</b> tab on the Appwrite console.</p>
 
 <h2><a href="#personal-information" id="personal-information">Personal Information</a></h2>
-
-[TODO: @steven Talk about new personal information thing.]
+<p>
+    Encourage passwords that are hard to guess by disallowing users to pick passwords that contain personal information. 
+    Personal information includes the user's name, email, and phone number.
+</p>
+<p>Disallowing personal information can be enabled in the Auth service's <b>Security</b> tab on the Appwrite console.</p>
