Add more information about password security in Appwrite

--- a/app/views/docs/authentication-email-pass.phtml
+++ b/app/views/docs/authentication-email-pass.phtml
@@ -433,5 +433,13 @@ let token = try await account.updateRecovery(
 </ul>
 
 <h2><a href="#security" id="security">Security</a></h2>
-[TODO: @steven Talk about the password security features like password dictionary, password history, and prevent personal information.]
-[Be brief, link to security page for details]
+<p>
+   Appwrite does more than use secure implementation of email and password authentication on the server-side to ensure security.
+   You can enable features like password dictionary, password history, and disallow personal information to encourage users to pick better passwords.
+   By enabling these features, you protect user data and teach better password choices, which helps make the internet a safer place.
+</p>
+<p>
+<a href="/docs/authentication-security#password-history"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> 
+    Learn more about security features
+</a>
+</p>
