--- a/app/views/docs/authentication-oauth.phtml
+++ b/app/views/docs/authentication-oauth.phtml
@@ -105,7 +105,7 @@ try await account.createOAuth2Session(provider: "amazon")</code></pre>
 
 <h2><a href="#profile" id="profile">OAuth 2 Profile</a></h2>
 <p>
-    [TODO: @steven fill the docs to access profile information]
+    [TODO: @steven fill the docs to access oauth account profile information]
 </p>
 
 <h2><a href="#refresh" id="refresh">Refresh Tokens</a></h2>
