--- a/app/views/docs/authentication-security.phtml
+++ b/app/views/docs/authentication-security.phtml
@@ -78,10 +78,13 @@
 
 <p>You can change the session limit in the <b>Security</b> tab of the Auth Service in your Appwrite Console. The default session limit is 10 with a maximum configurable limit of 100.</p> 
 
-<h2><a href="/docs/authentication-security#security" id="security">Security</a></h2>
+<h2><a href="/docs/authentication-security#permissions" id="permissions">Permissions</a></h2>
 
 <p>
-    Security is very important to protect users' data and privacy. Appwrite uses a <a href="/docs/permissions">permissions model</a> coupled with user sessions to ensure users need correct permissions to access resources. With all Appwrite services, including databases and storage, access is granted at the collection, bucket, document, or file level. These permissions are enforced for client SDKs and server SDKs when using JWT, but are ignored when using a server SDK with an API key.
+    Security is very important to protect users' data and privacy. 
+    Appwrite uses a <a href="/docs/permissions">permissions model</a> coupled with user sessions to ensure users need correct permissions to access resources.
+    With all Appwrite services, including databases and storage, access is granted at the collection, bucket, document, or file level. 
+    These permissions are enforced for client SDKs and server SDKs when using JWT, but are ignored when using a server SDK with an API key.
 </p>
 
 <h2><a href="#password-history" id="password-history">Password History</a></h2>
