Improve overview page for functions and rename recipes to examples

--- a/app/views/docs/functions-develop.phtml
+++ b/app/views/docs/functions-develop.phtml
@@ -6,7 +6,7 @@
 
 <div class="notice">
   <h2>Just want the code? </h2>
-  <p>If you prefer to learn through examples, explore the <a href="#recipes">recipes section</a>.</p>
+  <p>If you prefer to learn through examples, explore the <a href="/docs/functions-examples">examples page</a>.</p>
 </div>
 
 <h2>Function Flow</h2>
@@ -2165,14 +2165,6 @@ public class Main {
     </li>
 </ul>
 
-<h2><a href="#recipes" id="recipes">Recipes</a></h2>
-<p>
-    We have a dedicated page of recipes to implement common functionalities in Appwrite Functions, like parsing request path and params, or making requests to third party APIs.
-</p>
-
-<p>
-<a href="/docs/command-line-ci"><i class="icon-angle-circled-right"></i>Explore examples and recipes</a>
-</p>
 
 <h2><a href="#upgrade" id="upgrade">Upgrade</a></h2>
 <p>
