--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -100,7 +100,7 @@ $cols = [
                             <li>&nbsp;&nbsp;<a href="/docs/functions-deploy" data-selected="/docs/functions"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Deploy</a></li>
                             <li>&nbsp;&nbsp;<a href="/docs/functions-execute" data-selected="/docs/functions"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Execute</a></li>
                             <li>&nbsp;&nbsp;<a href="/docs/functions-runtimes" data-selected="/docs/functions"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Runtimes</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/functions-recipes" data-selected="/docs/functions"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Recipes</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/functions-examples" data-selected="/docs/functions"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Examples</a></li>
                         </ul>
                     </li>
                 </ul>
