Fix style in index and add alt text to functions

--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -22,8 +22,8 @@ $image = new View(__DIR__.'/../general/image.phtml');
     echo $image
         ->setParam('srcLight', '/images-ee/docs/functions-starter-light.png')
         ->setParam('srcDark', '/images-ee/docs/functions-starter-dark.png')
-        ->setParam('alt', 'Function settings page.')
-        ->setParam('description', 'Function settings page.')
+        ->setParam('alt', '"Create Function" page.')
+        ->setParam('description', '"Create Function" page.')
         ->render();
 ?>
 
