--- a/app/views/docs/authentication-management.phtml
+++ b/app/views/docs/authentication-management.phtml
@@ -4,10 +4,6 @@
     Each user can also have their own preference object, which you can use to save preferences such as theme, language, and notification settings.
 </p>
 
-[TODO @steven: TEAMS docs]
-
-[TODO @steven: Labels docs]
-
 
 <h2><a href="#preferences" id="preferences">User Preferences</a></h2>
 <p>You can store user preferences on a user's account using Appwrite's <a href="/docs/client/account#accountUpdatePrefs">Update Preferences</a> endpoint. You can store user preferences such as theme, notification settings, or preferred language so they can be synced across multiple devices.</p>
@@ -190,3 +186,206 @@ let prefs = try await account.getPrefs()</code></pre>
     Learn more about the Users API
 </a>
 </p>
+
+<h2><a href="#labels" id="labels">Labels</a></h2>
+<p>
+    Labels are a good way to flag a user to grant them access to resources. 
+    For example, a <code>subscriber</code> label can be added to a user once they've purchased a subscription.
+</p>
+
+<ul class="phases clear" data-ui-phases>
+    <li>
+        <h3>Node.js</h3>
+        <div class="ide margin-top-small" data-lang="nodejs" data-lang-label="Node.js SDK">
+            <pre class="line-numbers"><code class="prism language-javascript" data-prism>const sdk = require('node-appwrite');
+
+const client = new sdk.Client();
+
+const users = new sdk.Users(client);
+
+let res = await users.updateLabels('[USER_ID]', [ Role.label('subscriber') ]);</code></pre>
+        </div>
+    </li>
+    <li>
+        <h3>PHP</h3>
+
+        <div class="ide margin-top-small" data-lang="php" data-lang-label="PHP SDK">
+            <pre class="line-numbers"><code class="prism language-php" data-prism>use Appwrite\Client;
+use Appwrite\Services\Users;
+use Appwrite\Role;
+
+$client = new Client();
+
+$client
+    .setEndpoint('https://cloud.appwrite.io/v1') // Your API Endpoint
+    .setProject('5df5acd0d48c2') // Your project ID
+    .setKey('919c2d18fb5d4...a2ae413da83346ad2') // Your secret API key
+;
+
+$users = new Users($client);
+
+$result = $users->updateLabels(
+    '[USER_ID]', 
+    [
+        Role.label('subscriber'),
+    ]
+);</code></pre>
+        </div>
+    </li>
+    <li>
+        <h3>Python</h3>
+        <div class="ide margin-top-small" data-lang="python" data-lang-label="Python SDK">
+            <pre class="line-numbers"><code class="prism language-python" data-prism>from appwrite.client import Client
+from appwrite.services.users import Users
+from appwrite.role import Role
+
+client = Client()
+
+(client
+  .set_endpoint('https://cloud.appwrite.io/v1') # Your API Endpoint
+  .set_project('5df5acd0d48c2') # Your project ID
+  .set_key('919c2d18fb5d4...a2ae413da83346ad2') # Your secret API key
+)
+ 
+users = Users(client)
+
+result = users.update_labels('[USER_ID]', [ Role.label('subscriber') ])</code></pre>
+        </div>
+    </li>
+    <li>
+        <h3>Ruby</h3>
+        <div class="ide margin-top-small" data-lang="ruby" data-lang-label="Ruby SDK">
+            <pre class="line-numbers"><code class="prism language-ruby" data-prism>require 'Appwrite'
+
+include Appwrite
+
+client = Client.new
+    .set_endpoint('https://cloud.appwrite.io/v1') # Your API Endpoint
+    .set_project('5df5acd0d48c2') # Your project ID
+    .set_key('919c2d18fb5d4...a2ae413da83346ad2') # Your secret API key
+
+users = Users.new(client)
+
+response = users.update_labels(user_id: '[USER_ID]', labels: [ Role.label('subscriber') ])
+
+puts response.inspect</code></pre>
+        </div>
+    </li>
+    <li>
+        <h3>Deno</h3>
+        <div class="ide margin-top-small" data-lang="typescript" data-lang-label="Deno SDK">
+            <pre class="line-numbers"><code class="prism language-typescript" data-prism>import * as sdk from "https://deno.land/x/appwrite/mod.ts";
+
+// Init SDK
+let client = new sdk.Client();
+
+let users = new sdk.Users(client);
+
+client
+    .setEndpoint('https://cloud.appwrite.io/v1') // Your API Endpoint
+    .setProject('5df5acd0d48c2') // Your project ID
+    .setKey('919c2d18fb5d4...a2ae413da83346ad2') // Your secret API key
+;
+
+
+let res = await users.updateLabels('[USER_ID]', [ Role.label('subscriber') ]);</code></pre>
+        </div>
+    </li>
+    <li>
+        <h3>Dart</h3>
+        <div class="ide margin-top-small" data-lang="dart" data-lang-label="Dart SDK">
+            <pre class="line-numbers"><code class="prism language-dart" data-prism>import 'package:dart_appwrite/dart_appwrite.dart';
+
+void main() { // Init SDK
+  Client client = Client();
+  Users users = Users(client);
+
+  client
+    .setEndpoint('https://cloud.appwrite.io/v1') // Your API Endpoint
+    .setProject('5df5acd0d48c2') // Your project ID
+    .setKey('919c2d18fb5d4...a2ae413da83346ad2') // Your secret API key
+  ;
+
+  Future result = users.updateLabels(
+    userId: '[USER_ID]',
+    labels: [ Role.label('subscriber') ],
+  );
+
+  result
+    .then((response) {
+      print(response);
+    }).catchError((error) {
+      print(error.response);
+  });
+}</code></pre>
+        </div>
+    </li>
+    <li>
+        <h3>Kotlin</h3>
+        <div class="ide margin-top-small" data-lang="kotlin" data-lang-label="Kotlin SDK">
+            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>import io.appwrite.Client
+import io.appwrite.services.Users
+import io.appwrite.Role
+
+suspend fun main() {
+    val client = Client(context)
+      .setEndpoint("https://cloud.appwrite.io/v1") // Your API Endpoint
+      .setProject("5df5acd0d48c2") // Your project ID
+      .setKey("919c2d18fb5d4...a2ae413da83346ad2") // Your secret API key
+
+    val users = Users(client)
+    val response = users.updateLabels(
+        userId = "[USER_ID]",
+        labels = [ Role.label('subscriber') ]
+    )
+    val json = response.body?.string()
+}</code></pre>
+        </div>
+    </li>
+    <li>
+        <h3>Swift</h3>
+        <div class="ide margin-top-small" data-lang="swift" data-lang-label="Swift SDK">
+            <pre class="line-numbers"><code class="prism language-swift" data-prism>import Appwrite
+
+func main() async throws {
+    let client = Client()
+      .setEndpoint("https://cloud.appwrite.io/v1") // Your API Endpoint
+      .setProject("5df5acd0d48c2") // Your project ID
+      .setKey("919c2d18fb5d4...a2ae413da83346ad2") // Your secret API key
+    let users = Users(client)
+    let response = try await users.updateLabels(
+        userId: "[USER_ID]",
+        labels: [ Role.label('subscriber') ]
+    )
+
+    print(String(describing: response)
+}</code></pre>
+        </div>
+    </li>
+    <li>
+        <h3>.NET</h3>
+        <div class="ide margin-top-small" data-lang="csharp" data-lang-label=".NET SDK">
+            <pre class="line-numbers"><code class="prism language-csharp" data-prism></code></pre>
+        </div>
+    </li>
+</ul>
+
+<p>
+    This would correspond with the permissions <code>Permissions.read(Role.label('subscriber'))</code>, <code>Permissions.update(Role.label('subscriber'))</code>, <code>Permissions.delete(Role.label('subscriber'))</code>, and <code>Permissions.create(Role.label('subscriber'))</code>.
+</p>
+
+
+<p>
+    <li class="margin-bottom"><a href="/docs/permissions" rel="noopener"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Learn more about permissions</a></li>
+</p>
+
+<h2><a href="#teams" id="teams">Teams</a></h2>
+<p>
+    Teams are a good way to allow users to share access to resources. 
+</p>
+
+<p>
+    For example, in a todo app, a user can <a href="docs/client/teams#teamsCreate">create a team</a> for one of their todo lists and <a href="/docs/client/teams#teamsCreateMembership">invite another user</a> to the team to grant the other user access.
+    The invited user can <a href="/docs/client/teams#teamsUpdateMembershipStatus">accept the invitation</a> to gain access.
+    If the user's ever removed from the team, they'll lose access again.
+</p>  
